[tool.poetry]
name = "necstdb"
version = "0.2.5"
description = "Database for NECST."
authors = ["Kaoru Nishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
classifiers=[
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
homepage = "https://github.com/ogawa-ros/necstdb"
repository = "https://github.com/ogawa-ros/necstdb"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.0"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b0"
flake8 = "^3.8.0"
pytest = "^6.1.0"
ipykernel = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
