[tool.poetry]
name = "necstdb"
version = "0.2.9"
description = "Database for NECST."
authors = ["Kaoru Nishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ogawa-ros/necstdb"
repository = "https://github.com/ogawa-ros/necstdb"
classifiers=[
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = [
    { version = "^1.19", python = "<3.8" },
    { version = "^1.22", python = ">=3.8" },
]
xarray = [
    { version = "^2022.3", python = ">=3.9" },
    { version = ">=2022.3, <2023.2", python = ">=3.8, <3.9" },
    { version = "0.12.1", python = ">=3.7, <3.8" },
]
pandas = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
black = "^20.8b"
flake8 = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
